--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Fmilthaler.github.io : gh-pages" />
+    <meta name="description" content="My Projects : by fmilthaler" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Fmilthaler.github.io</title>
+    <title>My Projects</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/fmilthaler">View on GitHub</a>
 
-          <h1 id="project_title">Fmilthaler.github.io</h1>
-          <h2 id="project_tagline">gh-pages</h2>
+          <h1 id="project_title">My Projects</h1>
+          <h2 id="project_tagline">by fmilthaler</h2>
 
         </header>
     </div>
@@ -27,37 +27,25 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+<a name="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br><a href="github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a name="py2pgfplotstable" class="anchor" href="#py2pgfplotstable"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>This project aims to automate the process, thus to fill the gap between generating data and writing the corresponding LaTeX commands to create a table. The comprehensive and package PGFPlotsTable is used on the LaTeX front.<br><a href="http://github.com/fmilthaler/py2pgfplotstable">Link to Py2PGFPlotsTable</a></p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a name="moderncvstyles" class="anchor" href="#moderncvstyles"><span class="octicon octicon-link"></span></a>moderncvstyles</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>This LaTeX packages provides a few more styles for the popular LaTeX moderncv package, which are mostly modifications of the styles provided by moderncv.<br><a href="http://www.ctan.org/pkg/moderncv">Link to moderncv on ctan</a><br><a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<h2>
+<a name="github-overview" class="anchor" href="#github-overview"><span class="octicon octicon-link"></span></a>GitHub overview</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>This <a href="http://github.com/fmilthaler">overview</a> shows you what projects I'm currently working on GitHub.</p>
       </section>
     </div>
 
