Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>
 <a name="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
 
-<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br><a href="github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
+<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br><a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
 
 <h2>
 <a name="py2pgfplotstable" class="anchor" href="#py2pgfplotstable"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
