--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <section id="main_content" class="inner">
         <h2>
 <a name="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
-<iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe>  
-<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br><a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
+
+<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br><a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a><br><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p>
 
 <h2>
 <a name="py2pgfplotstable" class="anchor" href="#py2pgfplotstable"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
