--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <h2>
 <a name="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
 
-<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a><br><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p>
+<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://github.com/fmilthaler/turbine-geometry-automagic">TGAM project on GitHub</a></p>
+
+<h3><a name="tgaminaction" class="anchor" href="#tgaminaction"><span class="oticon octicon-link"></span></a>TGAM in action</h3>
+<p><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h2>
 <a name="py2pgfplotstable" class="anchor" href="#py2pgfplotstable"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
