--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <h2>
 <a name="moderncvstyles" class="anchor" href="#moderncvstyles"><span class="octicon octicon-link"></span></a>moderncvstyles</h2>
 
-<p>This LaTeX packages provides a few more styles for the popular LaTeX moderncv package, which are mostly modifications of the styles provided by moderncv.<br><a href="http://www.ctan.org/pkg/moderncv">Link to moderncv on ctan</a><br><a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
+<p>This LaTeX package provides a few tweaks/additions/styles for the popular LaTeX moderncv and moderntimeline packages.<br><a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
+
 
 <h2>
 <a name="github-overview" class="anchor" href="#github-overview"><span class="octicon octicon-link"></span></a>GitHub overview</h2>
