Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="My Projects : by fmilthaler" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="My Projects : by fmilthaler">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -28,26 +28,33 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
+<a id="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
 
-<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br><a href="http://github.com/fmilthaler/turbine-geometry-automagic">TGAM project on GitHub</a></p>
-
-<h3><a name="tgaminaction" class="anchor" href="#tgaminaction"><span class="oticon octicon-link"></span></a>TGAM in action</h3>
-<p><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p></p>
-
-<h2>
-<a name="py2pgfplotstable" class="anchor" href="#py2pgfplotstable"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
-
-<p>This project aims to automate the process, thus to fill the gap between generating data and writing the corresponding LaTeX commands to create a table. The comprehensive and package PGFPlotsTable is used on the LaTeX front.<br><a href="http://github.com/fmilthaler/py2pgfplotstable">Link to Py2PGFPlotsTable</a></p>
+<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br>
+<a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br>
+<a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
 
 <h2>
-<a name="moderncvstyles" class="anchor" href="#moderncvstyles"><span class="octicon octicon-link"></span></a>moderncvstyles</h2>
+<a id="hpcmonitor" class="anchor" href="#hpcmonitor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HPCMonitor</h2>
 
-<p>This LaTeX package provides a few tweaks/additions/styles for the popular LaTeX moderncv and moderntimeline packages.<br><a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
-
+<p>This project provides a Python class aims to automate tasks associated with running jobs on HPC systems, e.g. estimation of required number of cores, data analysis/crunching, text processing, error checking, automatic e-mail reports. It is a very effective and useful tool especially when thousands of simulations are running simultaneously.<br>
+<a href="http://github.com/fmilthaler/HPCMonitor">Link to HPCMonitor</a></p>
 
 <h2>
-<a name="github-overview" class="anchor" href="#github-overview"><span class="octicon octicon-link"></span></a>GitHub overview</h2>
+<a id="py2pgfplotstable" class="anchor" href="#py2pgfplotstable" aria-hidden="true"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
+
+<p>This project aims to automate the process, thus to fill the gap between generating data and writing the corresponding LaTeX commands to create a table. The comprehensive and package PGFPlotsTable is used on the LaTeX front.<br>
+<a href="http://github.com/fmilthaler/py2pgfplotstable">Link to Py2PGFPlotsTable</a></p>
+
+<h2>
+<a id="moderncvstyles" class="anchor" href="#moderncvstyles" aria-hidden="true"><span class="octicon octicon-link"></span></a>moderncvstyles</h2>
+
+<p>This LaTeX packages provides a few more styles for the popular LaTeX moderncv package, which are mostly modifications of the styles provided by moderncv.<br>
+<a href="http://www.ctan.org/pkg/moderncv">Link to moderncv on ctan</a><br>
+<a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
+
+<h2>
+<a id="github-overview" class="anchor" href="#github-overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>GitHub overview</h2>
 
 <p>This <a href="http://github.com/fmilthaler">overview</a> shows you what projects I'm currently working on GitHub.</p>
       </section>
@@ -56,7 +63,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
