Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br>
 <a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br>
+<a href="http://cubit.sandia.gov">Cubit website</a><br>
 <a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
 
 <h2>
