--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 <a id="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
 
 <p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br>
-<a href="http://youtu.be/CPQyoHOI3m8">Demonstration on YouTube</a><br>
 <a href="http://cubit.sandia.gov">Cubit website</a><br>
 <a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
++<h3><a name="tgaminaction" class="anchor" href="#tgaminaction"><span class="oticon octicon-link"></span></a>TGAM in action</h3>
++<p><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h2>
 <a id="hpcmonitor" class="anchor" href="#hpcmonitor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HPCMonitor</h2>
