Adding FinQuant to index.html

--- a/index.html
+++ b/index.html
@@ -27,38 +27,56 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+
+        <!-- FinQuant -->
         <h2>
-<a id="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
+          <a id="finquant" class="anchor" href="#finquant" aria-hidden="true"><span class="octicon octicon-link"></span></a>FinQuant</h2>
+        <p><img src="https://raw.githubusercontent.com/fmilthaler/finquant/master/images/finquant-logo.png" width="32%" align="left" style="padding: 0 15px">FinQuant is a program for financial portfolio management, analysis and optimisation. It is designed to generate an object that holds your data, e.g. stock prices of different stocks, which automatically computes the most common quantities, such as Expected annual Return, Volatility and Sharpe Ratio. Moreover, it provides a library for computing different kinds of Returns and visualising Moving Averages and Bollinger Bands. Finally, given a set of stocks, it also allows for finding optimised portfolios.</p>
+        <p>FinQuant is made to be easily extended. I hope it proves itself useful for hobby investors, students, geeks, and the intellectual curious.
+        </p>
+        <p>
+          <a href="https://github.com/fmilthaler/FinQuant">FinQuant on GitHub</a><br>
+          <a href="https://pypi.org/project/FinQuant">FinQuant on PyPI</a><br>
+          <a href="https://finquant.readthedocs.io">FinQuant Documentation</a>
+        </p>
+        <p>
+        <p align="center">
+          <img src="https://finquant.readthedocs.io/en/latest/_images/ef-mc-overlay.svg" width="85%">
+        </p>
+        </p>
 
-<p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br>
-<a href="http://cubit.sandia.gov">Cubit website</a><br>
-<a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
-<h3><a name="tgaminaction" class="anchor" href="#tgaminaction"><span class="oticon octicon-link"></span></a>TGAM in action</h3>
-<p><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p></p>
+        <!-- TGAM -->
+        <h2>
+          <a id="turbine-geometry-automagic-tgam" class="anchor" href="#turbine-geometry-automagic-tgam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Turbine-Geometry-AutoMagic (TGAM)</h2>
 
-<h2>
-<a id="hpcmonitor" class="anchor" href="#hpcmonitor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HPCMonitor</h2>
+        <p>This project provides the user a Python class which allows the them to specify a number of parameters in order to automagically generate the geometry (and mesh) of a wind/tidal turbine in Cubit.<br>
+          <a href="http://cubit.sandia.gov">Cubit website</a><br>
+          <a href="http://github.com/fmilthaler/turbine-geometry-automagic">Link to the TGAM project</a></p>
+        <h3><a name="tgaminaction" class="anchor" href="#tgaminaction"><span class="oticon octicon-link"></span></a>TGAM in action</h3>
+        <p><iframe width="640" height="360" src="//www.youtube-nocookie.com/embed/CPQyoHOI3m8?rel=0" frameborder="0" allowfullscreen></iframe></p></p>
 
-<p>This project provides a Python class aims to automate tasks associated with running jobs on HPC systems, e.g. estimation of required number of cores, data analysis/crunching, text processing, error checking, automatic e-mail reports. It is a very effective and useful tool especially when thousands of simulations are running simultaneously.<br>
-<a href="http://github.com/fmilthaler/HPCMonitor">Link to HPCMonitor</a></p>
+        <h2>
+          <a id="hpcmonitor" class="anchor" href="#hpcmonitor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HPCMonitor</h2>
+          <p>This project provides a Python class aims to automate tasks associated with running jobs on HPC systems, e.g. estimation of required number of cores, data analysis/crunching, text processing, error checking, automatic e-mail reports. It is a very effective and useful tool especially when thousands of simulations are running simultaneously.<br>
+            <a href="http://github.com/fmilthaler/HPCMonitor">Link to HPCMonitor</a></p>
 
-<h2>
-<a id="py2pgfplotstable" class="anchor" href="#py2pgfplotstable" aria-hidden="true"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
+        <h2>
+          <a id="py2pgfplotstable" class="anchor" href="#py2pgfplotstable" aria-hidden="true"><span class="octicon octicon-link"></span></a>Py2PGFPlotsTable</h2>
+          <p>This project aims to automate the process, thus to fill the gap between generating data and writing the corresponding LaTeX commands to create a table. The comprehensive and package PGFPlotsTable is used on the LaTeX front.<br>
+            <a href="http://github.com/fmilthaler/py2pgfplotstable">Link to Py2PGFPlotsTable</a></p>
 
-<p>This project aims to automate the process, thus to fill the gap between generating data and writing the corresponding LaTeX commands to create a table. The comprehensive and package PGFPlotsTable is used on the LaTeX front.<br>
-<a href="http://github.com/fmilthaler/py2pgfplotstable">Link to Py2PGFPlotsTable</a></p>
+        <h2>
+          <a id="moderncvstyles" class="anchor" href="#moderncvstyles" aria-hidden="true"><span class="octicon octicon-link"></span></a>moderncvstyles</h2>
 
-<h2>
-<a id="moderncvstyles" class="anchor" href="#moderncvstyles" aria-hidden="true"><span class="octicon octicon-link"></span></a>moderncvstyles</h2>
+          <p>This LaTeX packages provides a few more styles for the popular LaTeX moderncv package, which are mostly modifications of the styles provided by moderncv.<br>
+            <a href="http://www.ctan.org/pkg/moderncv">Link to moderncv on ctan</a><br>
+            <a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
 
-<p>This LaTeX packages provides a few more styles for the popular LaTeX moderncv package, which are mostly modifications of the styles provided by moderncv.<br>
-<a href="http://www.ctan.org/pkg/moderncv">Link to moderncv on ctan</a><br>
-<a href="http://github.com/fmilthaler/moderncvstyles">Link to moderncvstyles on github</a></p>
+        <h2>
+          <a id="github-overview" class="anchor" href="#github-overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>GitHub overview</h2>
 
-<h2>
-<a id="github-overview" class="anchor" href="#github-overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>GitHub overview</h2>
+          <p>This <a href="http://github.com/fmilthaler">overview</a> shows you what projects I'm currently working on GitHub.</p>
 
-<p>This <a href="http://github.com/fmilthaler">overview</a> shows you what projects I'm currently working on GitHub.</p>
       </section>
     </div>
 
@@ -68,8 +86,6 @@
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
